--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,7 @@ body { margin: 0; }
 
 /* Mobile niceties */
 * { -webkit-tap-highlight-color: transparent; }
+.force-light { color-scheme: light; }
 
 @tailwind base;
 @tailwind components;
