--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -212,7 +212,7 @@ html, body, #root {
     font-size: 1em;
     font-weight: 500;
     font-family: inherit;
-    background-color: #1a1a1a;
+    /* background-color: #1a1a1a; */
     cursor: pointer;
     transition: border-color 0.25s;
   }
